# telegram-channel-parser

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: config.py  main.py
src/api/: router.py  schemas.py
src/database/: database.py  models.py
src/location/: extractor.py  map_service.py
src/telegram/: client.py  listener.py
