[tool.poetry]
name = "tg-channel-parser"
version = "0.1.0"
description = "Application for parsing Telegram channels to extract location data"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
telethon = "^1.29.2"
pyrogram = "^2.0.106"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.20"
alembic = "^1.12.0"
pydantic = "^2.3.0"
psycopg2-binary = "^2.9.7"
asyncpg = "^0.28.0"
httpx = "^0.24.1"
python-dotenv = "^1.0.0"
loguru = "^0.7.0"
transliterate = "^1.10.2"
polyglot = "^16.7.4"
geopy = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.9.1"
isort = "^5.12.0"
mypy = "^1.5.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true